# ortho-schedule

./: .dockerignore  .gitignore  CLAUDE.md  render.yaml  vercel.json
backend/: mypy.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260622_0001_enable_btree_gist.py  20260622_0002_foundation_tables.py  20260622_0003_foundation_rls.py  20260622_0004_us1_scheduling.py  20260622_0005_us2_requests_notifications.py  20260622_0006_patient_clinic_identifier.py  20260622_0007_clinics.py  20260622_0008_user_is_admin.py  20260623_0009_template_clinic.py  20260623_0010_exception_clinic.py  20260623_0011_request_reason_optional.py
backend/src/: __init__.py  main.py
backend/src/api/: appointments.py  auth.py  availability.py  centers.py  clinics.py  health.py  notifications.py  patients.py  requests.py  users.py
backend/src/core/: config.py  db.py  security.py  session.py  timezone.py
backend/src/models/: __init__.py  appointment.py  appointment_request.py  audit_event.py  auth_session.py  availability_exception.py  availability_template.py  center.py  clinic.py  doctor_profile.py  notification.py  patient.py  user.py
backend/src/schemas/: appointment.py  auth.py  availability.py  center.py  clinic.py  notification.py  patient.py  request.py  user.py
backend/src/scripts/: seed_superadmin.py
backend/src/services/: availability_resolver.py  booking_service.py  center_service.py  clinic_service.py  notification_service.py  patient_service.py  request_service.py  user_service.py
backend/src/tenancy/: __init__.py  audit.py  scope.py
backend/tests/: conftest.py  helpers.py
backend/tests/contract/: test_appointments.py  test_auth.py  test_availability.py  test_centers.py  test_health.py  test_notifications.py  test_patients.py  test_requests.py  (+1 more)
(+90 files in other folders)
